# BusMe

./: BusMe_DB.sql  README.md
client/: .eslintrc  .eslintrc.json  app.json  package-lock.json  package.json  tsconfig.json
client/android/: settings.gradle
client/android/app/: BUCK  build.gradle
client/ios/: Podfile
client/ios/BusMe/: AppDelegate.h  AppDelegate.m  (+1 more)
client/ios/BusMe.xcodeproj/: project.pbxproj
client/ios/BusMe.xcworkspace/: contents.xcworkspacedata
client/public/: index.html
client/src/: App.js  App.jsx  App.tsx  BusLocations.js  BusLocations.jsx  BusStops.js  Button.js  Button.jsx  CurrentLocation.js  CurrentLocation.jsx  GoogleMapsAPI.js  GoogleMapsAPI.jsx  Homepage.js  Homepage.jsx  Places.js  Routing.js  Routing.jsx  UserInfo.jsx  dummyFile.js  index.js  index.jsx  index.tsx  style.ts
express_server/: .gitignore  README.md  app.js  package-lock.json  package.json  server.js
express_server/app/: index.js  util.js
express_server/config/: default.yaml
express_server/db/: 83384d31-cb64-414d-b779-4b71cdefb423.sqlite
express_server/migrations/: 001-initial.sql
js_client/: driver.html  driver.js  driverWaiting.html  homepage.html  index.html  main.js  map.js  master.css  passenger.html  passenger.js  passengerSubmission.html  passengerSubmission.js  submit.html  submit.js
js_client/css/: driver.css  global.css  main.css  passenger.css  submit.css
js_client/js/: authenticate.js  driver.js  main.js  map.js  passenger.js  socket.js  submit.js
server/: .gitignore  README.md  pyproject.toml  setup.py
server/bus_me/: __init__.py  __sqlite_patch.py  enitites.py  entities.py
server/bus_me/__types/: __init__.py  json.py
server/bus_me/authentication/: __init__.py  jwt.py
server/bus_me/config/: .gitignore  default.yaml  development.yaml
server/bus_me/endpoint/: __init__.py  _async_namespace.py  _require_auth.py  admin.py  data.py  driver.py  login.py  rider.py  test.py
(+44 files in other folders)
